Add open ERP launch error codes
